ざっくり機能搭載

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,9 @@
-<h1><strong>Bikers</strong></h1>
-<h3 style="text-align: center">バイクが好きな人全員集合</h3>
+<div class="main">
+<head>
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+</head>
+<body>
+  <h1><strong>Bikers</strong></h1>
+ 
+</body>
+</div>
