--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,21 +10,33 @@
   </head>
 
   <body>
-    <% if user_signed_in? %>
-      <li>
-        <%= link_to '投稿フォーム', new_post_path %>
-      </li>
-      <li>
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      </li>
-    <% else %>
-      <li>
-        <%= link_to "新規登録", new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to "ログイン", new_user_session_path %>
-      </li>
-    <% end %>
-    <%= yield %>
+      
+      <% if user_signed_in? %>
+      <nav>
+        <ul class="nav-list">
+          <li class="nav-list-item">
+            <%= link_to 'ジャンル一覧', genres_path %>
+          </li>
+          <li class="nav-list-item">
+            <%= link_to '投稿一覧', posts_path %>
+          </li>
+          <li class="nav-list-item">
+            <%= link_to '新規投稿', new_post_path %>
+          </li>
+          <li class="nav-list-item">
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+          </li>
+        <% else %>
+          <li class="nav-list-item">
+            <%= link_to "新規登録", new_user_registration_path %>
+          </li>
+          <li class="nav-list-item">
+            <%= link_to "ログイン", new_user_session_path %>
+          </li>
+        </ul>
+        </nav>
+        <% end %>
+        <%= yield %>
+      
   </body>
 </html>
