--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,10 @@
-<h1>投稿フォーム</h1>
+<div class="post-new">
+
+ <h1>新規投稿</h1>
+<%= form_with model: @genre, local: true do |f| %>
+ <h4>ジャンル</h4>
+ <%= f.text_field :name %>
+<% end %>
 <%= form_with model: @post, local: true do |f| %>
  <h4>画像</h4>
  <%= f.attachment_field :image %>
@@ -8,3 +14,4 @@
  <%= f.text_area :caption %>
  <%= f.submit '投稿' %>
 <% end %>
+</div>
