--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,27 +20,50 @@
 }
 
 
+
 nav {
   width: 100%;
   margin: 0 auto;
-  border-top: solid 0.7px #000000;
-  border-bottom: solid 0.7px #000000;
-  background-color: #fff;
+  flex-direction: column;
+  color: #fff;
+  transition: .3s;
 }
 
 .nav-list {
-  text-align: center;
-  padding: 10px 0;
+  text-align: left;
+  padding: 0;
   margin: 0 auto;
-  
 }
 
 .nav-list-item {
   list-style: none;
   display: inline-block;
-  margin: 0 20px;
+  margin: auto;
+}
+
+.nav-link0, .nav-link1, .nav-link2, .nav-link3, .nav-link4, .nav-link5 {
+  margin-left: 0;
+  border: solid 2px #BBBBBB;
+  border-radius: 4px;
+  box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), 0 2px 2px rgba(0, 0, 0, 0.19);
+  font-weight: bold;
+  background-color: #BBBBBB;
+  color: #EEEEEE;
 }
 
 title {
-  font-size: 30px;
+  font-size: 40px;
+}
+
+footer {
+  background-color: #808080;
+}
+
+h5 {
+  font-size: 20px;
+  margin-top: 0;
+  height: 50px;
+  text-align: center;
+  padding-top: 25px;
+  font-family: 'Lobster', cursive;
 }
