--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.post-new {
+  background-image: image-url('landscape2.jpg');
+  background-size: cover;
+  position: relative;
+  opacity: 0.8;
+}
