--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,4 @@
 <div class="post-new">
-
  <h1>新規投稿</h1>
 <%= form_with model: @genre, local: true do |f| %>
  <h4>ジャンル</h4>
@@ -11,7 +10,7 @@
  <h4>タイトル</h4>
  <%= f.text_field :post_name %>
  <h4>本文</h4>
- <%= f.text_area :caption %>
+ <%= f.text_area :caption, size: "80x20" %>
  <%= f.submit '投稿' %>
 <% end %>
 </div>
