--- a/app/assets/stylesheets/post/post-index.css
+++ b/app/assets/stylesheets/post/post-index.css
@@ -6,18 +6,24 @@
 
 .post-index {
   width: 400px;
-  height: 450px;
   margin: 60px auto 0;
   border-radius: 4px;
   border: 1px #ddd solid;
 }
 
 .post-show2 {
+
+  justify-content: center;
   width: 400px;
   text-align: center;
   font-size: 15px;
   color: #767676;
   margin-bottom: 14px;
+}
+
+.post-image{
+  width: 30%;
+  height: auto;
 }
 
 
