--- a/app/assets/stylesheets/signin.css
+++ b/app/assets/stylesheets/signin.css
@@ -25,7 +25,7 @@ h1 {
   color: #111111;
 }
 
-.box-email {
+.box-name {
   margin-bottom: 13px;
 }
 
@@ -33,14 +33,14 @@ h1 {
   margin-bottom: 22px;
 }
 
-.box-email label, .box-password label {
+.box-name label, .box-password label {
   font-weight: 700;
   font-size: 13px;
   padding-left: 2px;
   padding-bottom: 2px;
 }
 
-.box-email input[type="email"] {
+.box-name input[type="text"] {
   border-style: none;
   box-sizing: border-box;
   width: 100%;
