--- a/app/assets/stylesheets/signup.css
+++ b/app/assets/stylesheets/signup.css
@@ -25,6 +25,11 @@ h1 {
   color: #111111;
 }
 
+.box2-name {
+  margin-bottom: 13px;
+  
+}
+
 .box2-email {
   margin-bottom: 13px;
 }
@@ -33,7 +38,9 @@ h1 {
   margin-bottom: 22px;
 }
 
-.box2-email input[type="email"], .box2-password input[type="password"] {
+.box2-email input[type="email"], 
+.box2-password input[type="password"], 
+.box2-name input[type="text"]{
   border-style: none;
   box-sizing: border-box;
   width: 100%;
@@ -73,7 +80,7 @@ h1 {
   text-decoration: line-through;
 }
 
-.box-usr a {
+.box-usrs a {
   display: block;
   width: 100%;
   height: 30px;
