--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,6 +2,10 @@
   <div class="box2-inner">
     <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
     <h2>新規登録</h2>
+      <div class="box2-name">
+          <%= f.label :name, "名前" %><br />
+          <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+      </div>
       <div class="box2-email">
         <%= f.label :email, "Eメール" %><br />
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
