--- a/app/assets/stylesheets/genre/genre-index.css
+++ b/app/assets/stylesheets/genre/genre-index.css
@@ -1,9 +1,21 @@
 .genre-index {
   color:#000;
-  text-align: center;
-  border: 1px #000 solid;
+
+
 }
 
 .genre-index h1 {
   color: #000;
+}
+
+.genre-index2 {
+  display: inline-flex;
+  border: 1px #000 solid;
+  width: 280px;
+  height: 250px;
+  margin-bottom: 5px;
+}
+
+.genre-index3 {
+  display: inline-block;
 }
