--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,9 +1,11 @@
 <div class="genre-index">
     <h1>ジャンル一覧</h1>
     <% @genres.each do |genre| %>
-    <div>
-      <p>ジャンル名:<%= genre.name %></p>
-      <p>説明:<%= genre.instruction %></p>
+    <div class="genre-index2">
+      <div class="genre-index3">
+        <p>ジャンル名:<%= genre.name %></p>
+        <p>説明:<%= genre.instruction %></p>
+      </div>
     </div>
     <% end %>
 </div>
