--- a/app/assets/stylesheets/signup.css
+++ b/app/assets/stylesheets/signup.css
@@ -13,7 +13,7 @@
 }
 
 .box2-inner {
-  padding: 20px 26px;
+  padding: 1px 26px;
 }
 
 h1 {
@@ -27,7 +27,7 @@ h1 {
 
 .box2-name {
   margin-bottom: 13px;
-  
+
 }
 
 .box2-email {
@@ -38,8 +38,8 @@ h1 {
   margin-bottom: 22px;
 }
 
-.box2-email input[type="email"], 
-.box2-password input[type="password"], 
+.box2-email input[type="email"],
+.box2-password input[type="password"],
 .box2-name input[type="text"]{
   border-style: none;
   box-sizing: border-box;
@@ -67,6 +67,7 @@ h1 {
   height: 30px;
   background:linear-gradient(to bottom,#f7dfa5,#f0c14b);
   border-radius: 3px;
+  margin-top: 6px;
 }
 
 .box-usr p {
@@ -76,11 +77,11 @@ h1 {
   margin-bottom: 14px;
 }
 
-.box-usr p span {
-  text-decoration: line-through;
-}
+/*.box-usr p span {*/
+/*  text-decoration: line-through;*/
+/*}*/
 
-.box-usrs a {
+.box-usr a {
   display: block;
   width: 100%;
   height: 30px;
@@ -90,7 +91,7 @@ h1 {
   text-align: center;
   background: linear-gradient((to bottom,#f7f8fa,#e7e9ec);
   border-radius: 3px;
-  
+  border: 1px #a2a6ac solid;
 }
 
 .box-usr a:hover {
