--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
   <div class="post-show2">
      <div class="post-image">
        <%= link_to post_path(post.id) do %>
-       <p>画像:<% post.image %></p>
+       <p>画像<% post.image %></p>
       <% end %>
      </div>
         <div class="post-usr-name">
