--- a/app/assets/stylesheets/post/post-index.css
+++ b/app/assets/stylesheets/post/post-index.css
@@ -7,10 +7,10 @@
 .post-index {
   width: 400px;
   margin: 60px auto 0;
-  
+
 }
 
-.post-show2 {
+.post-index2 {
   justify-content: center;
   width: 400px;
   text-align: center;
