--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,23 +1,26 @@
 <div class="post-show">
-  <%= attachment_image_tag @post, :image %>
-  <div class="post-time">
-    <p><%= @post.created_at.strftime('%Y/%m/%d') %></p>
-  </div>
-  
-  <div class="post-name">
-    <p><%= @post.post_name %></p>
-  </div>
-  
-  <div class="post-caption">
-    <p><%= @post.caption %></p>
-  </div>
-  
-  <div class="post-usr-name">
-    <p><%= @post.user.name %></p>
-  </div>
+  <%= attachment_image_tag @post, :image, size: "400x370", format:'jpg', fallback:"no-img.jpg" %>
+  <div class ="post-show2">
+    <div class="post-time">
+      <p><%= @post.created_at.strftime('%Y/%m/%d') %></p>
+    </div>
 
-  <div class="post-delete"><% if @post.user == current_user %>
-    <%= link_to "削除", post_path(@post), method: :delete %>
-  <% end %>
+    <div class="post-name">
+      <p><%= @post.post_name %></p>
+    </div>
+
+    <div class="post-caption">
+      <p><%= @post.caption %></p>
+    </div>
+
+    <div class="post-usr-name">
+      <p><%= @post.user.name %></p>
+    </div>
+
+    <div class="post-delete">
+      <% if @post.user == current_user %>
+      <%= link_to "削除", post_path(@post), method: :delete %>
+      <% end %>
+    </div>
   </div>
 </div>
