--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,9 @@
 <div class="post-index">
   <% @posts.each do |post| %>
-  <div class="post-show2">
+  <div class="post-index2">
      <div class="post-image">
        <%= link_to post_path(post.id) do %>
-       <p>画像<% post.image %></p>
+       <p><%= attachment_image_tag @post, :image, size: "400x370", format:'jpg', fallback:"no-img.jpg" %></p>
       <% end %>
      </div>
         <div class="post-usr-name">
@@ -15,7 +15,7 @@
         <div class="post-cap">
           <p>本文:<%= post.caption %> </p>
         </div>
-        
+
   </div>
   <% end %>
 </div>
