--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,18 @@
-<h1>Bikers</h1>
+<div class="about">
+    <head>
+      <link href="https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    </head>
+  <body>
+    <div class="about-sentence">
+      <h1><strong>Bikers</strong></h1>
+    </div>
+    <div class="about-cap">
+      <p>Bikersはバイク好きのバイク好きによるバイク好きのための自己満足用のサイトです<br />
+         バイクの写真をあげてもよし！<br />
+         ツーリング先の風景をあげてもよし！<br />
+         バイクの購入を考えている人はBikersに質問をするもよし！<br />
+         <p>みなさまのBiker LIFEが充実しますように！</p>
+    </div>
+  </body>
+</div>
