--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? && current_user.id.to_s == params[:id] %>
-  <h1>My page (<%= @user.name %>)</h1>
+  <h1>My page </h1>
   <h2><%= @user.name %>さんの投稿</h2>
 <% else %>
- <h1><%= @user.name %>さんの投稿一覧</h1>
+ <h1><%= @user.name %>の投稿一覧</h1>
 <% end %>
