--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -8,6 +8,13 @@
 <%= form_with model: @post, local: true do |f| %>
  <h4>画像</h4>
  <%= f.attachment_field :image %>
+ <h4>ジャンル</h4>
+ <%= f.label :genre%>
+ <%= f.collection_check_boxes(:genre_ids, Genre.all, :id, :name ) do |genre|%>
+  <%= genre.label do %>
+   <%= genre.check_box %>
+  <% end %>
+ <% end %>
  <h4>タイトル</h4>
  <%= f.text_field :post_name %>
  <h4>本文</h4>
