--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,6 +4,9 @@
     <div class="post-time">
       <p><%= @post.created_at.strftime('%Y/%m/%d') %></p>
     </div>
+    <% @post.genres.each do |genre| %>
+      #<%= genre.name %>
+    <% end %>
 
     <div class="post-name">
       <p><%= @post.post_name %></p>
