--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,34 +17,18 @@
       <% if user_signed_in? %>
       <nav class="navbar navbar-expand-md  navbar-light bg-light">
         <ul class="nav-list">
-          <li class="nav-list-item">
-            <a class="nav-link0" href="/genres">ジャンル一覧</a>
-          </li>
-          <li class="nav-list-item">
-            <a class="nav-link1" href="/posts">投稿一覧</a>
-          </li>
-          <li class="nav-list-item">
-            <a class="nav-link2" href="/posts/new">新規投稿</a>
-          </li>
-          <li class="nav-list-item">
-            <%= link_to "ログアウト", destroy_user_session_path, method: :delete, data: {confirm: "ログアウトしますか？"}, class:"nav-link3" %>
-          </li>
-          <li class="nav-list-item">
-            <%= link_to"マイページ",user_path(current_user.id), class:"nav-link4" %>
+          <li><a href="/genres">ジャンル一覧</a></li>
+          <li><a href="/posts">投稿一覧</a></li>
+          <li><a href="/posts/new">新規投稿</a></li>
+          <li><a href="/users/sign_out" onclick="return confirm('ログアウトしますか？')" >ログアウト</a></li>
+          <li>
+            <a><%= link_to"マイページ",user_path(current_user.id), class:"nav-link4" %></a>
           </li>
         <% else %>
-          <li class="nav-list-item">
-            <a class="nav-link5" href="/users/sign_up">新規登録</a>
-          </li>
-          <li class="nav-list-item">
-            <a class="nav-link6" href="/users/sign_in">ログイン</a>
-          </li>
-          <li　class="nav-list-item">
-            <a class="nav-link7" href="/home/about">サイト概要</a>
-          </li>
-          <li class="nav-list-item">
-            <a class="nav-link8" href="/">トップページ</a>
-          </li>
+          <li><a href="/users/sign_up">新規登録</a></li>
+          <li><a href="/users/sign_in">ログイン</a></li>
+          <li><a href="/home/about">サイト概要</a></li>
+          <li><a href="/">トップページ</a></li>
         </ul>
       <% end %>
       </nav>
