--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 .main {
-  background-image: url(https://www.yamaha-motor.co.jp/mc/life/55mph/photo/img/006/img_point_01.jpg);
+  background-image: image-url('bike2.jpg');
   height: 900px;
   background-size:cover;
   background-position: center;
