--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,10 +1,14 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+＊{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .post-new {
-  background-image: image-url('landscape2.jpg');
-  background-size: cover;
-  position: relative;
-  opacity: 0.8;
+  background: linear-gradient(#f7797d,#fbd786,#c6ffdd);
+  
 }
 
