--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <!--Bpptstrap Javascript読み込みコード追加-->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
 
 
@@ -22,18 +22,18 @@
           <li><a href="/posts/new">新規投稿</a></li>
           <li>
             <a><%= link_to"ログアウト", destroy_user_session_path, method: :delete %></a>
-            </li>
-          <li>
-            <a><%= link_to"マイページ",user_path(current_user.id), class:"nav-link4" %></a>
           </li>
-        <% else %>
+          <li>
+            <a><%= link_to"マイページ",user_path(current_user.id) %></a>
+          </li>
+         <% else %>
           <li><a href="/users/sign_up">新規登録</a></li>
           <li><a href="/users/sign_in">ログイン</a></li>
           <li><a href="/home/about">サイト概要</a></li>
           <li><a href="/">トップページ</a></li>
         </ul>
-      <% end %>
       </nav>
+      <% end %>
       <%= yield %>
   　<footer>
       <h5>©All Right Rserverd Bikers</h5>
