--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,6 +20,20 @@
       <p><%= @post.user.name %></p>
     </div>
 
+    <div class="post-comment">
+      <%= form_with(model: [@post, @comment], method: :post) do |f| %>
+      <%= f.text_area :comment_content %>
+      <%= f.hidden_field :post_id, value: @post.id %>
+      <%= f.submit 'コメント送信' %>
+      <% end %>
+    </div>
+
+    <div class="post-comments">
+      <% @comments.each do |comment| %>
+        #<%= comment.comment_content %>
+      <% end %>
+    </div>
+
     <div class="post-delete">
       <% if @post.user == current_user %>
       <%= link_to "削除", post_path(@post), method: :delete %>
