--- a/app/assets/stylesheets/signup.css
+++ b/app/assets/stylesheets/signup.css
@@ -89,7 +89,7 @@ h1 {
   color: #111;
   line-height: 30px;
   text-align: center;
-  background: linear-gradient((to bottom,#f7f8fa,#e7e9ec);
+  background: linear-gradient(to bottom,#f7f8fa,#e7e9ec);
   border-radius: 3px;
   border: 1px #a2a6ac solid;
 }
