--- a/app/assets/stylesheets/post/post-index.css
+++ b/app/assets/stylesheets/post/post-index.css
@@ -18,7 +18,7 @@
   color: #767676;
   margin-bottom: 14px;
   border-radius: 4px;
-  border: 1px #ddd solid;
+  /*border: 1px #ddd solid;*/
 }
 
 .post-image{
