いいね機能　プロフィール編集

--- a/app/assets/stylesheets/post/post-show.css
+++ b/app/assets/stylesheets/post/post-show.css
@@ -7,7 +7,7 @@
 .post-show {
   width: 400px;
   margin-left: 280px;
-  /*border: 1px #ddd solid;*/
+  border: 1px #ddd solid;
   margin-bottom: 10px;
   margin-top: 50px;
 }
