--- a/app/assets/stylesheets/post/post-index.css
+++ b/app/assets/stylesheets/post/post-index.css
@@ -17,9 +17,9 @@
   font-size: 15px;
   color: #767676;
   margin-bottom: 14px;
-  border-radius: 4px;
-  /*border: 1px #ddd solid;*/
+  border: 1px #ddd solid;
 }
+
 
 .post-image{
   width: 30%;
