--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,15 @@
 <div class="post-index">
   <% @posts.each do |post| %>
   <div class="post-index2">
+
      <div class="post-image">
        <%= link_to post_path(post.id) do %>
        <p><%= attachment_image_tag @post, :image, size: "400x370", format:'jpg', fallback:"no-img.jpg" %></p>
       <% end %>
      </div>
+        <div class="post-img">
+          <%= attachment_image_tag post.user, :profile_image, size:"30x30", fallback: "no-img.jpg" %>
+        </div>
         <div class="post-usr-name">
           <p>投稿者:<%= post.user.name %> </p>
         </div>
