--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,34 @@
-<% if user_signed_in? && current_user.id.to_s == params[:id] %>
-  <h1>My page </h1>
-  <h2><%= @user.name %>さんの投稿</h2>
-<% else %>
- <h1><%= @user.name %>の投稿一覧</h1>
-<% end %>
+<div class="profile-container">
+  <h3 class="profile-name"><%= @user.name %></h3>
+ <div class="profile_image">
+   <% if @user.id ==current_user.id %>
+     <%= link_to edit_user_path(@user) do %>
+       <%= attachment_image_tag @user, :profile_image, size: "60x60", format: 'jpeg', fallback: "no-img.jpg" %>
+     <% end %>
+   <% end %>
+ </div>
+</div>
+
+<div class="post-index">
+  <% @posts.each do |post| %>
+  <div class="post-index2">
+
+     <div class="post-image">
+       <%= link_to post_path(post.id) do %>
+       <p><%= attachment_image_tag @post, :image, size: "400x370", format:'jpg', fallback:"no-img.jpg" %></p>
+      <% end %>
+     </div>
+        <div class="post-usr-name">
+          <p>投稿者:<%= post.user.name %> </p>
+        </div>
+        <div class="post-title">
+          <P>タイトル:<%= post.post_name %> </P>
+        </div>
+        <div class="post-cap">
+          <p>本文:<%= post.caption %> </p>
+        </div>
+
+  </div>
+  <% end %>
+</div>
+<%= paginate @posts %>
