--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="profile-container">
-  <h3 class="profile-name"><%= @user.name %></h3>
+  <h3 class="profile-name"><%= @user.name %>のマイページ</h3>
  <div class="profile_image">
    <% if @user.id ==current_user.id %>
      <%= link_to edit_user_path(@user) do %>
