--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,8 @@
-<% provide(:title, 'All users') %>
-<h1>All users</h1>
- 
-<ul class="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= link_to user.name, user %>
-    </li>
-  <% end %>
-</ul>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-8 offset-md-1'>
+    <h2>Users</h2>
+     <%= render 'index',users: @users %>
+    </div>
+  </div>
+</div>
