--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,7 +7,7 @@
     <% @post.genres.each do |genre| %>
       #<%= genre.name %>
     <% end %>
-
+    <!--%= render '/users/info', user: @user %-->
     <div class="post-img">
       <%= attachment_image_tag @post.user, :profile_image, size:"30x30", fallback: "no-img.jpg" %>
     </div>
@@ -15,13 +15,13 @@
     <% if @post.favorited_by?(current_user) %>
       <p>
         <%= link_to post_favorites_path(@post), method: :delete do %>
-          💙<%= @post.favorites.count %>いいね
+         <%= @post.favorites.count %>💙
         <% end %>
       </p>
     <% else %>
       <p>
         <%= link_to post_favorites_path(@post), method: :post do %>
-          🤍<%= @post.favorites.count %>いいね
+          <%= @post.favorites.count %>🤍
         <% end %>
       </p>
     <% end %>
