--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,10 @@
-<div class='container px-5 px-sm-0'>
-  <div class='row'>
-    <div class='col-md-8 offset-md-1'>
-    <h2>Users</h2>
-     <%= render 'index',users: @users %>
-    </div>
-  </div>
-</div>
+<h1>ALL Bikers</h1>
+
+<ul class="users">
+  <% @users.each do |user| %>
+    <li>
+      <%= attachment_image_tag @user, :profile_image, size: "60x60", format: 'jpeg', fallback: "no-img.jpg" %>
+      <%= link_to user.name, user %>
+    </li>
+  <% end %>
+</ul>
