--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,8 @@
      <%= link_to edit_user_path(@user) do %>
        <%= attachment_image_tag @user, :profile_image, size: "60x60", format: 'jpeg', fallback: "no-img.jpg" %>
      <% end %>
+   <% else %>
+     <%= attachment_image_tag @user, :profile_image, size: "60x60", format: 'jpeg', fallback: "no-img.jpg" %>
    <% end %>
  </div>
 </div>
