--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -13,6 +13,10 @@
          ツーリング先の風景をあげてもよし！<br />
          バイクの購入を考えている人はBikersに質問をするもよし！<br />
          <p>みなさまのBiker LIFEが充実しますように！</p>
+
+      <p><li><a href="/contacts/new">問い合わせフォーム</a><br /></li>
+      サービス向上の為、何かお気づきのことがあれば<br />
+      問い合わせフォームからお願いいたします。</p>
     </div>
   </body>
 </div>
