--- a/app/assets/stylesheets/about.css
+++ b/app/assets/stylesheets/about.css
@@ -15,10 +15,36 @@
   color: #fff;
 }
 
+.about-sentence h1 {
+  margin-top: 0;
+}
 .about-cap {
   margin-top: 250px;
   font-family: 'Sawarabi Mincho', sans-serif;
   text-align: center;
   color: #fff;
   font-size: 18px
+}
+
+.about-cap a {
+  color: #fff;
+}
+
+.about-cap p {
+  margin-top: 30px;
+}
+
+@media screen and (min-width:375px) and (max-width:768px) {
+  .about {
+    background-size: 400px;
+    background-position: bottom;
+  }
+
+  .about-sentence strong {
+    font-size: 55px;
+  }
+
+  .about-cap p {
+    font-size: 11px;
+  }
 }
