--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,36 +1,36 @@
-<div class="profile-container">
-  <h3 class="profile-name"><%= @user.name %>のマイページ</h3>
- <div class="profile_image">
-   <% if @user.id ==current_user.id %>
-     <%= link_to edit_user_path(@user) do %>
+<div class="show-main">
+  <div class="profile-container">
+    <h3 class="profile-name"><%= @user.name %>のマイページ</h3>
+   <div class="profile_image">
+     <% if @user.id ==current_user.id %>
+       <%= link_to edit_user_path(@user) do %>
+         <%= attachment_image_tag @user, :profile_image, size: "60x60", format: 'jpeg', fallback: "no-img.jpg" %>
+       <% end %>
+     <% else %>
        <%= attachment_image_tag @user, :profile_image, size: "60x60", format: 'jpeg', fallback: "no-img.jpg" %>
      <% end %>
-   <% else %>
-     <%= attachment_image_tag @user, :profile_image, size: "60x60", format: 'jpeg', fallback: "no-img.jpg" %>
-   <% end %>
- </div>
-</div>
-
-<div class="post-index">
-  <% @posts.each do |post| %>
-  <div class="post-index2">
-
-     <div class="post-image">
-       <%= link_to post_path(post.id) do %>
-       <p><%= attachment_image_tag @post, :image, size: "400x370", format:'jpg', fallback:"no-img.jpg" %></p>
-      <% end %>
-     </div>
-        <div class="post-usr-name">
-          <p>投稿者:<%= post.user.name %> </p>
-        </div>
-        <div class="post-title">
-          <P>タイトル:<%= post.post_name %> </P>
-        </div>
-        <div class="post-cap">
-          <p>本文:<%= post.caption %> </p>
-        </div>
-
+   </div>
   </div>
-  <% end %>
+
+  <div class="post-index">
+    <% @posts.each do |post| %>
+    <div class="post-index2">
+       <div class="post-image">
+         <%= link_to post_path(post.id) do %>
+         <p><%= attachment_image_tag post, :image, size: "400x370", format:'jpg', fallback:"no-img.jpg" %></p>
+        <% end %>
+       </div>
+          <div class="post-usr-name">
+            <p>投稿者:<%= post.user.name %> </p>
+          </div>
+          <div class="post-title">
+            <P>タイトル:<%= post.post_name %> </P>
+          </div>
+          <div class="post-cap">
+            <p>本文:<%= post.caption %> </p>
+          </div>
+    </div>
+    <% end %>
+  </div>
 </div>
 <%= paginate @posts %>
