--- a/app/assets/stylesheets/post/post-new.css
+++ b/app/assets/stylesheets/post/post-new.css
@@ -10,16 +10,17 @@
   border: 1px #000 solid;
 }
 .post-new h1{
-  color: #fff;
+  color: #999999;
 }
 
 .post-new h4{
-  color: #fff;
+  color: #999999;
 }
 
 .post-new ul {
   display: none;
 }
+
 
 
 
