--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -37,3 +37,9 @@ h1, h2 {
 .post-index {
   margin-top: 0;
 }
+
+.top-index h1 {
+  color: #666666;
+  font-size: 70px;
+  font-family: 'Lobster', cursive;
+}
