--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,32 +1,34 @@
-<div class="search-form">
-  <%= form_with url: search_path, method: :get, local: true do |f| %>
-    <%= f.text_field :keyword, value: @keyword %>
-    <%= f.submit "検索" %>
-  <% end %>
-</div>
-<div class="post-index">
-  <% @posts.each do |post| %>
-  <div class="post-index2">
-
-     <div class="post-image">
-       <%= link_to post_path(post.id) do %>
-       <p><%= attachment_image_tag post, :image, size: "400x370", format:'jpg', fallback:"no-img.jpg" %></p>
-      <% end %>
-     </div>
-        <div class="post-img">
-          <%= attachment_image_tag post.user, :profile_image, size:"30x30", fallback: "no-img.jpg" %>
-        </div>
-        <div class="post-usr-name">
-          <p>投稿者:<%= post.user.name %> </p>
-        </div>
-        <div class="post-title">
-          <P>タイトル:<%= post.post_name %> </P>
-        </div>
-        <div class="post-cap">
-          <p>本文:<%= post.caption %> </p>
-        </div>
-
+<div class="index-all">
+  <div class="search-form">
+    <%= form_with url: search_path, method: :get, local: true do |f| %>
+      <%= f.text_field :keyword, value: @keyword %>
+      <%= f.submit "検索" %>
+    <% end %>
   </div>
-  <% end %>
+  <div class="post-index">
+    <% @posts.each do |post| %>
+    <div class="post-index2">
+  
+       <div class="post-image">
+         <%= link_to post_path(post.id) do %>
+         <p><%= attachment_image_tag post, :image, size: "400x370", format:'jpg', fallback:"no-img.jpg" %></p>
+        <% end %>
+       </div>
+          <div class="post-img">
+            <%= attachment_image_tag post.user, :profile_image, size:"30x30", fallback: "no-img.jpg" %>
+          </div>
+          <div class="post-usr-name">
+            <p>投稿者:<%= post.user.name %> </p>
+          </div>
+          <div class="post-title">
+            <P>タイトル:<%= post.post_name %> </P>
+          </div>
+          <div class="post-cap">
+            <p>本文:<%= post.caption %> </p>
+          </div>
+  
+    </div>
+    <% end %>
+  </div>
 </div>
 <%= paginate @posts %>
