--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,14 @@
-<h1>ALL Bikers</h1>
-
-<ul class="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= attachment_image_tag @user, :profile_image, size: "60x60", format: 'jpeg', fallback: "no-img.jpg" %>
-      <%= link_to user.name, user %>
-    </li>
-  <% end %>
-</ul>
+<div class="top-index">
+  <head>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  </head>
+  <h1>ALL Bikers</h1>
+  <ul class="users">
+    <% @users.each do |user| %>
+      <li>
+        <%= attachment_image_tag @user, :profile_image, size: "60x60", format: 'jpeg', fallback: "no-img.jpg" %>
+        <%= link_to user.name, user %>
+      </li>
+    <% end %>
+  </ul>
+</div>
