いいねのデザイン,問い合わせ機能

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,12 +53,12 @@ title {
 }
 
 
-footer {
+body h5 {
   background-color: #808080;
-  width: 100%
+  width: 100%;
 }
 
-footer h5 {
+body h5 {
   color: #fff;
   font-size: 20px;
   margin-top: 0;
