--- a/app/views/contact_mailer/send_mail.html.erb
+++ b/app/views/contact_mailer/send_mail.html.erb
@@ -1,6 +1,9 @@
-<%= @contact.name %> 様 から問い合わせがありました。<br>
-【Tel】：<%= @contact.phone_number %><br>
-【Mail】：<%= @contact.email %><br>
-【用件】：<%= @contact.subject_i18n %><br>
-【お問い合わせ内容】<br>
-<span style="white-space: pre-wrap;"><%= @contact.message %></span>
+<h5>お問い合わせ内容</h5>
+
+<p>---------------------------</p>
+
+<p>お名前: <%= @contact.name %></p>
+
+<p>お問い合わせ内容: <%= @contact.message %></p>
+
+<p>---------------------------</p>
