--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,5 +1,8 @@
 <div class="genre-index">
-    <h1>ジャンル一覧</h1>
+  <head>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  </head>
+    <h1>Jenres</h1>
     <% @genres.each do |genre| %>
     <div class="genre-index2">
       <div class="genre-index3">
