--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <!--Bpptstrap Javascript読み込みコード追加-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
 
 
@@ -20,30 +20,27 @@
         <% if user_signed_in? %>
 
 
-            <li><a href="/genres">ジャンル一覧</a></li>
-            <li><a href="/posts">投稿一覧</a></li>
-            <li><a href="/posts/new">新規投稿</a></li>
+            <li><a href="/genres">Jenres</a></li>
+            <li><a href="/posts">All Posts</a></li>
+            <li><a href="/posts/new">New Post</a></li>
             <li>
-              <a><%= link_to"ログアウト", destroy_user_session_path, method: :delete %></a>
+              <a><%= link_to"Log out", destroy_user_session_path, method: :delete, data: {confirm: "Are you sure you want to log out?"} %></a>
             </li>
             <li>
-              <a><%= link_to"マイページ",user_path(current_user.id) %></a>
+              <a><%= link_to"MyPage",user_path(current_user.id) %></a>
             </li>
             <li><a href="/users">Bikers</a></li>
         <% else %>
-            <li><a href="/home/about">サイト概要</a></li>
-            <li><a href="/">トップページ</a></li>
-            <li><a href="/users/sign_up">新規登録</a></li>
-            <li><a href="/users/sign_in">ログイン</a></li>
+            <li><a href="/">TopPage</a></li>
+            <li><a href="/home/about">OverView</a></li>
+            <li><a href="/users/sign_up">Sign up</a></li>
+            <li><a href="/users/sign_in">Sign in</a></li>
 
 
         <% end %>
         </ul>
       </nav>
       <%= yield %>
-  　<footer>
       <h5>©All Right Rserverd Bikers</h5>
-    </footer>
   </body>
-
 </html>
