--- a/app/assets/stylesheets/post/post-new.css
+++ b/app/assets/stylesheets/post/post-new.css
@@ -11,10 +11,14 @@
 }
 .post-new h1{
   color: #999999;
+  font-size: 30px;
+  font-family: 'Lobster', cursive;
 }
 
 .post-new h4{
   color: #999999;
+  font-size: 15px;
+  font-family: 'Lobster', cursive;
 }
 
 .post-new ul {
