--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,15 +1,8 @@
-<%= form_for(@contact, url: confirm_path) do |f| %>
-  <div class="form-group">
-    <%= f.label :name, 'お名前*' %>
-    <%= f.text_field :name, autofocus: true, class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :message, 'メッセージ*' %>
-    <%= f.text_area :message, size: '10x10', class: 'form-control' %>
-  </div>
-
-  <div>
-    <%= f.submit '入力内容確認' %>
-  </div>
+<h5>お問い合わせフォーム</h5>
+<%= form_with model: @contact do |f| %>
+    <%= f.label :name, 'お名前*' %><br>
+    <%= f.text_field :name %><br>
+    <%= f.label :message, 'メッセージ*' %><br>
+    <%= f.text_field :message %>
+    <%= f.submit '送信' %>
 <% end %>
