ユーザー一覧flexbox

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -47,3 +47,14 @@ h1, h2 {
 .post-new p {
   margin-left: 300px;
 }
+
+.users {
+  display: block;
+  margin: 5px;
+  padding: 10px;
+  width: 100%;
+}
+
+.users p {
+  display: inline-block;
+}
