--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,10 +3,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   </head>
   <h1>ALL Bikers</h1>
-  <ul class="users">
-    <% @users.each do |user| %>
-      <%= attachment_image_tag user, :profile_image, size: "30x30", format: 'jpg', fallback: "no-img.jpg" %>
-      <%= link_to user.name, user %>
-    <% end %>
-  </ul>
+    <ul class="users">
+      <% @users.each do |user| %>
+        <p><%= attachment_image_tag user, :profile_image, size: "30x30", format: 'jpg', fallback: "no-img.jpg" %>
+        <%= link_to user.name, user %></p>
+      <% end %>
+    </ul>
+
 </div>
