--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -20,7 +20,7 @@
     <%= f.text_field :post_name %>
     <h4>Caption</h4>
     <%= f.text_area :caption, size: "20x15" %>
-    <%= f.submit '投稿' %>
+    <%= f.submit '送信' %>
    <% end %>
    </div>
  </div>
