--- a/app/assets/stylesheets/genre/genre-index.css
+++ b/app/assets/stylesheets/genre/genre-index.css
@@ -3,6 +3,7 @@
 }
 
 .genre-index h1 {
+  margin-top: 0;
   color: #000;
   font-size: 70px;
   font-family: 'Lobster', cursive;
@@ -10,9 +11,11 @@
 
 .genre-index2 {
   display: inline-flex;
-  border: 1px #000 solid;
+  opacity: 0.6;
+  border: 1px #fff solid;
   width: 280px;
-  height: 250px;
+  height: 145px;
+  padding-top: 10px;
   margin-bottom: 5px;
 }
 
@@ -21,5 +24,7 @@
 }
 
 .genre-index3 p {
-  color: #000;
+  color: #fff;
+  opacity: 1.5;
 }
+
