--- a/app/assets/stylesheets/genres.scss
+++ b/app/assets/stylesheets/genres.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Genres controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+＊ {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.genre-index {
+  background-image: image-url('landscape12.jpg');
+  background-size: cover;
+  background-position: center;
+}
