--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,9 @@
 <div class="show-main">
+  <head>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  </head>
   <div class="profile-container">
-    <h3 class="profile-name"><%= @user.name %>のマイページ</h3>
+    <h3 class="profile-name"><%= @user.name %>'s My Page</h3>
    <div class="profile_image">
      <% if @user.id ==current_user.id %>
        <%= link_to edit_user_path(@user) do %>
@@ -32,5 +35,5 @@
     </div>
     <% end %>
   </div>
+  <%= paginate @posts %>
 </div>
-<%= paginate @posts %>
