問い合わせ機能

--- a/app/assets/stylesheets/post/post-new.css
+++ b/app/assets/stylesheets/post/post-new.css
@@ -25,6 +25,14 @@
   display: none;
 }
 
+.post-new h6 {
+  color: #fff;
+  font-size: 3px;
+}
 
+.field {
+  color: #fff;
+  font-size: 5px;
+}
 
 
