--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -19,7 +19,7 @@ h1, h2 {
 }
 
 .profile-name {
-  color: #fff;
+  color: #555;
   margin-top: 0;
   font-size: 30px;
   font-family: 'Lobster', cursive;
@@ -61,4 +61,5 @@ h1, h2 {
 .users p {
   display: inline-block;
 }
+
 
