非同期通信

--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -14,5 +14,6 @@
       </div>
     </div>
     <% end %>
-    <p><%= link_to "ジャンル追加", new_genre_path %></p>
+    <!--ユーザーに新たに追加させない-->
+    <!--<p><%# link_to "ジャンル追加", new_genre_path %></p>-->
 </div>
