--- a/app/assets/stylesheets/post/post-show.css
+++ b/app/assets/stylesheets/post/post-show.css
@@ -34,6 +34,15 @@
   font-size: 10px
 }
 
-.post-comment {
-  text-align: right;
+.comments {
+  display: inline;
+}
+
+.comments h2 {
+  text-align: center;
+  color:#888;
+  font-size: 50px;
+  font-family: 'Lobster', cursive;
+  margin-bottom: 0;
+  margin-top: 0;
 }
