--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,6 @@
 <div class="post-show">
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.css" type="text/css" media="all" />
   </head>
@@ -16,21 +17,9 @@
       <%= attachment_image_tag @post.user, :profile_image, size:"30x30", fallback: "no-img.jpg" %>
     </div>
 
-    <% if @post.favorited_by?(current_user) %>
-      <p>
-        <%= link_to post_favorites_path(@post), method: :delete, remote: true do %>
-         <span style="color: #ff1493"><i class="fa fa-heart faa-pulse animated faa-slow"></i></span>
-         <%= @post.favorites.count %>人
-        <% end %>
-      </p>
-    <% else %>
-      <p>
-        <%= link_to post_favorites_path(@post), method: :post, remote: true do %>
-          <span style="color: #ffb6c1"><i class="fa fa-heart"></i></span>
-          <%= @post.favorites.count %>人
-        <% end %>
-      </p>
-    <% end %>
+    <div id="favorites_buttons_<%= @post %>">
+      <%= render partial: 'favorites/favorite', locals: { post: @post} %>
+    </div>
 
     <div class="post-usr-name">
       <p><%= @post.user.name %></p>
@@ -43,27 +32,24 @@
     <div class="post-caption">
       <p><%= @post.caption %></p>
     </div>
-
-
-
-    <div class="post-comment">
-      <%= form_with(model: [@post, @comment], method: :post) do |f| %>
-      <%= f.text_area :comment_content %>
-      <%= f.hidden_field :post_id, value: @post.id %>
-      <%= f.submit '送信' %>
-      <% end %>
-    </div>
-
-    <div class="post-comments">
-      <% @comments.each do |comment| %>
-        #<%= comment.comment_content %>
-      <% end %>
-    </div>
-
+    
     <div class="post-delete">
       <% if @post.user == current_user %>
       <%= link_to "削除", post_path(@post), method: :delete %>
       <% end %>
     </div>
-  </div>
+    </div>
+
+    <div class="comments">
+    <h2>Comments</h2>
+        <div class="comments_index">
+          <div id='comments_area'>
+            <%= render partial: 'comments/index', locals: { comments: @comments } %>
+          </div>
+        </div>
+        <% if user_signed_in? %>
+          <%= render partial: 'comments/form', locals: { comment: @comment, post: @post } %>
+        <% end %>
+    </div>
 </div>
+
